k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: django-app-deploy
    labels:
        app: django-pod
        env: pod-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: django-pod
            env: pod-app
    template:
        metadata:
            labels:
                app: django-pod
                env: pod-app
        spec:
            containers:
                - name: django-app
                  image: elzig1999/django_app:latest
                  ports:
                    - containerPort: 80
