k8s/k8s-django-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: django-app-deploy
    labels:
        app: django-pod
        env: pod-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: django-pod
            env: pod-app
    template:
        metadata:
            labels:
                app: django-pod
                env: pod-app
        spec:
            containers:
                - name: django-app
                  image: elzig1999/django_app:latest
                  ports:
                    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc-nodeport
spec:
  selector:
    app: django-pod
    env: pod-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
  type: NodePort
