k8s/k8s-django-app-pod-nodeport.yaml
apiVersion: v1
kind: Pod
metadata:
    name: django-app-pod
    labels:
        app: django-pod
        env: pod-app
spec:
    containers:
      - name: django-app
        image: elzig1999/django_app:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc-nodeport
spec:
  selector:
    app: django-pod
    env: pod-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
