k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc-clusterip
spec:
  selector:
    app: django-pod
    env: pod-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
