k8s/k8s-django-app-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: django-app-deploy
    labels:
        app: django-pod
        env: pod-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: django-pod
            env: pod-app
    template:
        metadata:
            labels:
                app: django-pod
                env: pod-app
        spec:
            containers:
                - name: django-app
                  image: elzig1999/django_app:latest
                  ports:
                    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc-clusterip
spec:
  selector:
    app: django-pod
    env: pod-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: star-burger.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app-svc-clusterip
                port:
                  number: 8080
